2024-02-14T16:19:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7904191319 # 116
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-14
* notice: last 14d: unq all: 190 353
* notice: prev accum: outdated-unq outdated-all / unq all: 2574 6610 / 2820 6963
* notice: next accum: outdated-unq outdated-all / unq all: 2575 6612 / 2821 6965
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +16 +21 -0 -0 / 16 21
* notice: removed / changed dates: [2024-01-31] / [2024-02-14]

2024-02-14T08:19:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7898320822 # 115
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-14
* notice: last 14d: unq all: 189 352
* notice: prev accum: outdated-unq outdated-all / unq all: 2574 6610 / 2805 6944
* notice: next accum: outdated-unq outdated-all / unq all: 2574 6610 / 2820 6963
* notice: prev exec diff / last date diff / accum: unq all: +15 +19 -0 -0 / +15 +19 -0 -0 / 15 19
* notice: removed / changed dates: [] / [2024-02-14]

2024-02-14T01:08:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7895002672 # 114
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-14
* notice: last 14d: unq all: 179 333
* notice: prev accum: outdated-unq outdated-all / unq all: 2572 6607 / 2805 6944
* notice: next accum: outdated-unq outdated-all / unq all: 2574 6610 / 2805 6944
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [2024-01-30] / [2024-01-31]

2024-02-13T16:20:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7889530425 # 113