@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-02-01T16:19:35Z",
-  "count" : 2,
+  "timestamp" : "2024-02-15T01:08:13Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "count_decinc" : [ -1, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
