@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-02-14T16:19:33Z",
+  "timestamp" : "2024-02-15T01:08:13Z",
   "count_outdated" : 6612,
   "uniques_outdated" : 2575,
-  "count" : 6965,
-  "uniques" : 2821,
+  "count" : 6977,
+  "uniques" : 2831,
   "clones" : [
     {
       "timestamp": "2024-02-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -124,12 +124,12 @@
     },
     {
       "timestamp": "2024-02-14T00:00:00Z",
-      "count": 21,
-      "count_minmax": [ 19, 21 ],
-      "count_decinc": [ 0, 21 ],
-      "uniques": 16,
-      "uniques_minmax": [ 15, 16 ],
-      "uniques_decinc": [ 0, 16 ]
+      "count": 33,
+      "count_minmax": [ 19, 33 ],
+      "count_decinc": [ 0, 33 ],
+      "uniques": 26,
+      "uniques_minmax": [ 15, 26 ],
+      "uniques_decinc": [ 0, 26 ]
     }
   ]
 }
